--- a/wallpaper.html
+++ b/wallpaper.html
@@ -2,18 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>Bing_Wallpaper</title>
 <script src="https://libs.baidu.com/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script>
-		<!-- https://cn.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1 -->
-	    window.name = "哈哈，我是页面a设置的值哟！";
 	    //设置window.name的值
 	    setTimeout(function(){
-	        window.location = 'b.html';
-	    },3000);//3秒后把一个新页面载入当前window
+	        window.location = 'https://cn.bing.com/HPImageArchive.aspx?format=js&idx=0&n=1';
+	    },500);//3秒后把一个新页面载入当前window
 </script>
 <script>
-     alert(window.name);//读取window.name的值
+     var m_js=var test=document.getElementsByTagName('html')[0].outerHTML;;
+		 alert(m_js);
 </script>
 </head>
 <body>
