--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@ layout: default
 ---
 <script>
 	var uri='';
-  var aj = $.ajax( {    
-    url:'/bing',// 跳转到 action    
-    data:{    
-        uri : uri    
-    },    
-    type:'get',    
-    cache:false,    
-    dataType:'json',    
-    success:function(data) {    
+  var aj = $.ajax( {
+    url:'/bing',// 跳转到 action
+    data:{
+        uri : uri
+    },
+    type:'get',
+    cache:false,
+    dataType:'json',
+    success:function(data) {
          var jsonObj = data;
 	console.log(data.uri);
-	$('#particles-js').css({ 'background-image': "url("+jsonObj.uri+")"});   
-     },    
-     error : function() {    
-          // view("异常！");    
+	$('#particles-js').css({ 'background-image': "url("+jsonObj.uri+")"});
+     },
+     error : function() {
+          // view("异常！");
           console.log("error");
-     }    
+     }
   });
 </script>
 <body>
@@ -36,14 +36,20 @@ layout: default
 
     <div class="index-content">
       <ul class="artical-list">
-        {% for post in site.categories.blog %}
+        {% for post in paginator.posts %}
         <li>
           <a href="{{ post.url }}" class="title">{{ post.title }}</a>
           <div class="title-desc">{{ post.description }}</div>
         </li>
         {% endfor %}
+				{%  include pagination.html %}
       </ul>
+
+
     </div>
   </div>
+
+
+
   {% include footer.html %}
 </body>
