--- a/Categories.html
+++ b/Categories.html
@@ -9,22 +9,22 @@ layout: page
   <div class="list-category">
     <h2>所有分类</h2>
     <div>
-      {%- for category in site.categories %}
+      {% for category in site.categories %}
       <a href="javascript:document.getElementById('{{ category[0] }}').scrollIntoView()">{{ category[0] }}</a>
-      {%- endfor %}
+      {% endfor %}
     </div>
   </div>
-  {%- for category in site.categories %}
+  {% for category in site.categories %}
   <div class="list-post">
     <h2 id="{{ category[0] }}">{{ category[0] }}</h2>
     <ul>
-      {%- for post in category[1] %}
+      {% for post in category[1] %}
       <li>
         <span class="date">{{ post.date | date: "%Y/%m/%d" }}</span>
         <a href="{{ site.baseurl | append: post.url }}" class="title hover-underline">{{ post.title }}</a>
       </li>
-      {%- endfor %}
+      {% endfor %}
     </ul>
   </div>
-  {%- endfor %}
+  {% endfor %}
 </div>
