--- a/index.html
+++ b/index.html
@@ -2,33 +2,12 @@
 layout: default
 title: 首页
 ---
-<!--<script>
-	var uri='';
-  var aj = $.ajax( {
-    url:'/bing',// 跳转到 action
-    data:{
-        uri : uri
-    },
-    type:'get',
-    cache:false,
-    dataType:'json',
-    success:function(data) {
-         var jsonObj = data;
-	console.log(data.uri);
-	$('#particles-js').css({ 'background-image': "url("+jsonObj.uri+")"});
-     },
-     error : function() {
-          // view("异常！");
-          console.log("error");
-     }
-  });
-</script>-->
 <body>
   <div class="index-wrapper">
     <div class="aside">
       <div class="info-card">
         <h1>Mouleon</h1>
-        <a href="https://www.github.com/Mouleon/" target="_blank"><img src="{{site.cdn}}/github.ico" alt="" width="25"/></a>
+        <a href="https://www.github.com/Mouleon/" target="_blank"><img src="{{site.cdn}}/static/site/github.ico" alt="" width="25"/></a>
       </div>
       <div id="particles-js">
         <div id="particles-top"></div>
