--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: 首页
     <div class="aside">
       <div class="info-card">
         <h1>oneNeko</h1>
-        <a href="https://www.github.com/oneNeko/" target="_blank"><img src="{{site.cdn}}/static/image/site/github.ico" alt="" width="25"/></a>
+        <a href="https://www.github.com/oneNeko/" target="_blank"><img src="/github.ico" alt="" width="25"/></a>
       </div>
       <div id="particles-js">
         <div id="particles-top"></div>
