调整部分样式;添加文章

--- a/index.html
+++ b/index.html
@@ -26,4 +26,7 @@ title: 首页
     </div>
   </div>
   {% include footer.html %}
+  {% for post in paginator.posts %}
+        {{ post.url }}
+        {% endfor %}
 </body>
